--- a/organize-service/src/app/modules/menu-main/components/option-card-selecao-menu/option-card-selecao-menu.component.scss
+++ b/organize-service/src/app/modules/menu-main/components/option-card-selecao-menu/option-card-selecao-menu.component.scss
@@ -4,7 +4,7 @@
   input + label{
     display: block;
     width: 100%;
-    max-width: 200px;
+    width: 200px;
     height: 40px;
     border-radius: 10px;
     text-align: center;
