--- a/organize-service/src/app/shared/components/button-primary/button-primary.component.scss
+++ b/organize-service/src/app/shared/components/button-primary/button-primary.component.scss
@@ -11,4 +11,9 @@ button{
   font-size: 1em;
   display: block;
   cursor: pointer;
+  font-weight: bold;
+
+  &:hover{
+    box-shadow: 3px 3px 4px 0px #ababab;
+  }
 }
