area main criada

--- a/organize-service/src/app/modules/menu-main/pages/menu-main/menu-main.component.html
+++ b/organize-service/src/app/modules/menu-main/pages/menu-main/menu-main.component.html
@@ -1,6 +1,6 @@
 <section class="containerMenuMain">
   <div class="cardSelecaoInicial">
-    <img src="./assets/image/logo.png" alt="">
+    <img src="./assets/image/logo1.png" alt="">
 
     <h1>
       Selecione uma opção
