--- a/organize-service/src/app/shared/components/button-primary/button-primary.component.scss
+++ b/organize-service/src/app/shared/components/button-primary/button-primary.component.scss
@@ -5,13 +5,14 @@ button{
   border: none;
   border-radius: 10px;
   margin-top: 30px;
-  background: #094067;
+  background: #ff8906;
   color: #fff;
   font-weight: 500;
   font-size: 1em;
   display: block;
   cursor: pointer;
   font-weight: bold;
+  animation: showButton .7s;
 
   &:hover{
     box-shadow: 3px 3px 4px 0px #ababab;
