--- a/organize-service/src/styles.scss
+++ b/organize-service/src/styles.scss
@@ -1,6 +1,5 @@
 @keyframes showButton {
-  0%{display: none;}
-  20%{display: block;}
+  0%{opacity: 0;}
   100%{opacity: 1;}
 }
 
@@ -11,9 +10,13 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body{
+  background: #efefef;
+}
+
 app-root{
   width: 100%;
   height: 100vh;
-  background: #3da9fc;
+  background: #0f0e17;
   display: block;
 }
